GUI-2060: Adjust column header padding to avoid shifting cells when sorting indicators display

--- a/eucaconsole/static/sass/eucaconsole.scss
+++ b/eucaconsole/static/sass/eucaconsole.scss
@@ -1052,8 +1052,14 @@ table.table {
         word-break: break-all !important;
     }
     &.smart-table {
-        th[st-sort]:hover {
-            cursor: pointer;
+        th[st-sort] {
+            padding-right: 14px;
+            &:hover {
+                cursor: pointer;
+            }
+        }
+        .st-sort-ascent, .st-sort-descent {
+            padding-right: 0 !important;
         }
         .st-sort-ascent:after {
             content: '\25B2';
